@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 import com.gentics.mesh.context.InternalActionContext;
+import com.gentics.mesh.core.data.ETaggable;
 import com.gentics.mesh.core.data.TransformableElement;
 import com.gentics.mesh.core.rest.common.ListResponse;
 import com.gentics.mesh.core.rest.common.RestModel;
@@ -19,7 +20,7 @@ import io.reactivex.Single;
  * @param <T>
  *            Type of the page element
  */
-public interface TransformablePage<T extends TransformableElement<? extends RestModel>> extends Page<T> {
+public interface TransformablePage<T extends TransformableElement<? extends RestModel>> extends Page<T>, ETaggable {
 
 	/**
 	 * Transform the page into a list response.
@@ -57,6 +58,7 @@ public interface TransformablePage<T extends TransformableElement<? extends Rest
 	 * @param ac
 	 * @return
 	 */
+	@Override
 	default String getETag(InternalActionContext ac) {
 		StringBuilder builder = new StringBuilder();
 		builder.append(getTotalElements());
