@@ -29,6 +29,8 @@ include::content/docs/variables.adoc-include[]
 
 icon:check[] Core: Fixed a bug in the link renderer that caused the language parameter to be ignored if the branch parameter was passed.
 
+icon:check[] REST: Reading a node via REST with a numerical published version (e.g. 1.0) is now allowed if the user has read published permissions. link:https://github.com/gentics/mesh/issues/71[#71]
+
 [[v1.3.2]]
 == 1.3.2 (12.12.2019)
 
